--- a/app/compra/plist/plist.html
+++ b/app/compra/plist/plist.html
@@ -25,7 +25,7 @@
             <ul class="pagination">
               <li class="page-item" ng-class="{'active':(paginaActual==p)}" ng-disabled="p == '...'"
                 ng-repeat="p in botonera track by $index">
-                <a ng-show="filter==null" class="page-link" ng-if="p != '...'" href="compra/plist/{{ rppActual }}/{{ p }}///{{ buscar }}">{{ p }}</a>
+              <!--  <a ng-show="filter==null" class="page-link" ng-if="p != '...'" href="compra/plist/{{ rppActual }}/{{ p }}///{{ buscar }}">{{ p }}</a> -->
                 <a ng-show="filter!=null" class="page-link" ng-if="p != '...'" href="compra/plist/{{ rppActual }}/{{ p }}/{{filter}}/{{filter1}}/{{ buscar }}">{{ p }}</a>
 
                 <span class="page-link" ng-if="p == '...'">{{ p }}</span>
