--- a/app/factura/plist/plist.html
+++ b/app/factura/plist/plist.html
@@ -14,8 +14,8 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h1 ng-show="filter==null"><i class="fas fa-stream"></i> Listado de facturas</h1>
-      <h1 ng-show="filter!=null" id="cod_tipo"><div><i class="fas fa-stream"></i> Facturas de {{pagina[0].usuario_obj.login}}</div> <a href="factura/new/{{ pagina[0].usuario_obj.id }}/usuario"class="btn btn-primary">Nuevo</a></h1>
+      <h1 ng-show="filter==''"><i class="fas fa-stream"></i> Listado de facturas</h1>
+      <h1 ng-show="filter!=null && filter!=''" id="cod_tipo"><div><i class="fas fa-stream"></i> Facturas de {{pagina[0].usuario_obj.login}}</div> <a href="factura/new/{{ pagina[0].usuario_obj.id }}/usuario"class="btn btn-primary">Nuevo</a></h1>
     <br>
       <div class="row">
         <div class="col">
@@ -23,7 +23,7 @@
             <ul class="pagination">
               <li class="page-item" ng-class="{'active':(paginaActual==p)}" ng-disabled="p == '...'"
                 ng-repeat="p in botonera track by $index">
-                <a class="page-link" ng-if="p != '...'" href="factura/plist/{{ rppActual }}/{{ p }}">{{ p }}</a>
+                <a class="page-link" ng-if="p != '...'" href="factura/plist/{{ rppActual }}/{{ p }}/{{ filter }}/{{ buscar }}">{{ p }}</a>
                 <span class="page-link" ng-if="p == '...'">{{ p }}</span>
               </li>
             </ul>
@@ -33,7 +33,7 @@
           <nav aria-label="Registros por página">
             <ul class="pagination float-right">
               <li class="page-item" ng-class="{'active':(rppActual==r)}" ng-repeat="r in rppS">
-                <a class="page-link" href="factura/plist/{{ r }}/1">{{ r }}</a>
+                <a class="page-link" href="factura/plist/{{ r }}/1/{{ filter }}/{{ buscar }}">{{ r }}</a>
               </li>
             </ul>
           </nav>
@@ -76,7 +76,7 @@
         <ul class="pagination">
           <li class="page-item" ng-class="{'active':(paginaActual==p)}" ng-disabled="p == '...'"
             ng-repeat="p in botonera track by $index">
-            <a class="page-link" ng-if="p != '...'" href="factura/plist/{{ rppActual }}/{{ p }}">{{ p }}
+            <a class="page-link" ng-if="p != '...'" href="factura/plist/{{ rppActual }}/{{ p }}//{{ buscar }}">{{ p }}
             </a>
             <span class="page-link" ng-if="p == '...'">{{ p }}</span>
           </li>
