--- a/app/producto/plist/plist.html
+++ b/app/producto/plist/plist.html
@@ -14,8 +14,8 @@
 <div class="container">
   <div class="row">
     <div class="col">
-        <h1 ng-show="filter==null"><i class="fas fa-stream"></i> Listado de productos</h1>
-        <h1 ng-show="filter!=null"><i class="fas fa-stream"></i> Listado de {{pagina[0].tipo_producto_obj.descripcion}}</h1>
+        <h1 ng-show="filter==''"><i class="fas fa-stream"></i> Listado de productos</h1>
+        <h1 ng-show="filter!=null && filter!=''"><i class="fas fa-stream"></i> Listado de {{pagina[0].tipo_producto_obj.descripcion}}</h1>
       <br>
       <div class="row">
         <div class="col">
@@ -23,8 +23,10 @@
             <ul class="pagination">
               <li class="page-item" ng-class="{'active':(paginaActual==p)}" ng-disabled="p == '...'"
                 ng-repeat="p in botonera track by $index">
-                <a ng-show="filter==null" class="page-link" ng-if="p != '...'" href="producto/plist/{{ rppActual }}/{{ p }}">{{ p }}</a>
-                <a ng-show="filter!=null" class="page-link" ng-if="p != '...'" href="producto/plist/{{ rppActual }}/{{ p }}/{{filter}}">{{ p }}</a>
+               <!-- <a ng-show="filter==null" class="page-link" ng-if="p != '...'" href="producto/plist/{{ rppActual }}/{{ p }}//{{ buscar }}">{{ p }}</a>
+                <a ng-show="filter!=null" class="page-link" ng-if="p != '...'" href="producto/plist/{{ rppActual }}/{{ p }}/{{filter}}/{{ buscar}}">{{ p }}</a>-->
+                <a ng-show="filter!=null" class="page-link" ng-if="p != '...'" href="producto/plist/{{ rppActual }}/{{ p }}/{{filter}}/{{ buscar}}">{{ p }}</a>
+
                 <span class="page-link" ng-if="p == '...'">{{ p }}</span>
               </li>
             </ul>
@@ -34,8 +36,8 @@
           <nav aria-label="Registros por página">
             <ul class="pagination float-right">
               <li class="page-item" ng-class="{'active':(rppActual==r)}" ng-repeat="r in rppS">
-                  <a ng-show="filter==null"class="page-link" href="producto/plist/{{ r }}/1">{{ r }}</a>
-                  <a ng-show="filter!=null"class="page-link" href="producto/plist/{{ r }}/1/{{filter}}">{{ r }}</a>
+                  <a ng-show="filter==null"class="page-link" href="producto/plist/{{ r }}/1//{{ buscar }}">{{ r }}</a>
+                  <a ng-show="filter!=null"class="page-link" href="producto/plist/{{ r }}/1/{{filter}}/{{ buscar }}">{{ r }}</a>
               </li>
             </ul>
           </nav>
@@ -79,7 +81,7 @@
       <ul class="pagination">
         <li class="page-item" ng-class="{'active':(paginaActual==p)}" ng-disabled="p == '...'"
           ng-repeat="p in botonera track by $index">
-          <a class="page-link" ng-if="p != '...'" href="producto/plist/{{ rppActual }}/{{ p }}">{{ p }}
+          <a class="page-link" ng-if="p != '...'" href="producto/plist/{{ rppActual }}/{{ p }}//{{ buscar }}">{{ p }}
           </a>
           <span class="page-link" ng-if="p == '...'">{{ p }}</span>
         </li>
